--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,34 @@
 .App {
-  text-align: center;
-}
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
   display: flex;
-  flex-direction: column;
   align-items: center;
   justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+  height: 100%;
+  margin-top: -35px
 }
 
-.App-link {
-  color: #61dafb;
+.barcode-container {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  border-radius: 8px;
+  background-color: rgba(200, 230, 200, 0.25);
+  width: 480px;
+  padding: 25px;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.barcode-container > h1 {
+    font-size: 23px;
+}
+
+.form {
+    margin-bottom: 10px;
+}
+
+.barcode-text {
+  display: block;
+  text-align: center;
+  font-family: monospace;
+  font-size: 20px;
+  margin: 10px;
 }
